2009-11-24  Marek Safar  <marek.safar@gmail.com>

	* UTF8Encoding.cs (GetPreamble): Let compiler optimize it.

2009-11-02  Miguel de Icaza  <miguel@novell.com>

	* Jumbo patch to drop support for pre-NET_2_0 code:

	Remove NET_2_0 defines assuming the value is true.

2009-10-22  Miguel de Icaza  <miguel@novell.com>

	* StringBuilder.cs (Text): Add new 4.0 method.

2009-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Encoding.cs: Remove normalization methods for Moonlight

2009-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Encoding.cs: Add back UTF32 since it's useful for smcs

2009-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Encoding.cs: Remove UTF32, Latin1 and custom (loaded code)
	encodings for NET_2_1

2009-07-28  Miguel de Icaza  <miguel@novell.com>

	* UTF8Encoding.cs: Small optimization, reuse the static
	EncoderFallback and DecoderFallback instead of creating new ones. 

	* UTF8Encoding.cs: Use Equals to compare the objects as the
	fallback objects do not overload operator ==.    The comparison
	was previously failing.

2009-07-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* StringBuilder.cs: don't throw on null values in ctor(string, int).
	Unify another ctor into the main one to account for MaxCapacity.

2009-07-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* StringBuilder.cs: small fixes dealing with _maxCapacity.

2009-02-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* UTF32Encoding.cs: Added missing argument check in GetByteCount 
	(char*, int) overload.

2009-02-04  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF32Encoding.cs : fixed wrong range in GetByteCount(). Patch by
	  David Michell.

2009-01-30  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : surrogate characters are handled in 
	  InternalGetChars() but not in InternalGetCharCount().
	  Fixed bug #415628.

2009-01-13  Jb Evain  <jbevain@novell.com>

	* Encoding.cs: when creating a ForwardingEncoder or a