@@ -1,3 +1,8 @@
+2009-12-09  Chris Toshok  <toshok@ximian.com>
+
+	* Encoding.cs (get_Default): moonlight defaults to UTF8, not
+	UTF8Unmarked.
+	
 2009-11-24  Marek Safar  <marek.safar@gmail.com>
 
 	* UTF8Encoding.cs (GetPreamble): Let compiler optimize it.
